WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224238
[Cocoa] audio played at 2x speed video is not pitch corrected
https://bugs.webkit.org/show_bug.cgi?id=224238
Summary
[Cocoa] audio played at 2x speed video is not pitch corrected
Eric Carlson
Reported
2021-04-06 09:38:23 PDT
Audio played at 2x speed video is no pitch corrected
Attachments
Patch
(2.02 KB, patch)
2021-04-06 09:55 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.02 KB, patch)
2021-04-06 12:07 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-04-06 09:38:36 PDT
rdar://75868284
Eric Carlson
Comment 2
2021-04-06 09:55:03 PDT
Created
attachment 425291
[details]
Patch
Jer Noble
Comment 3
2021-04-06 11:46:33 PDT
Comment on
attachment 425291
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=425291&action=review
> Source/WebCore/ChangeLog:14 > + Teste manually.
nit: "Tested"
Eric Carlson
Comment 4
2021-04-06 12:07:17 PDT
Created
attachment 425307
[details]
Patch for landing
EWS
Comment 5
2021-04-06 12:38:39 PDT
Committed
r275538
: <
https://commits.webkit.org/r275538
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425307
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug